# azure-entra-id-OAuth

./: .gitignore  README.md  auth.py  env.example  pyproject.toml
src/: __init__.py  main.py
src/auth/: __init__.py  dependencies.py  jwt_validator.py  token_helper.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  user.py
